statum-macros-two/tests/ui/invalid_machine_no_generics.stderr
error: #[machine] structs must have a generic type parameter implementing `State`. Example:

                   #[machine]
                   struct Machine<S: State> {
                       client: String,
                       name: String,
                       priority: u8,
                   }
 --> tests/ui/invalid_machine_no_generics.rs:4:1
  |
4 | #[machine]
  | ^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `machine` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/ui/invalid_machine_no_generics.rs:8:2
  |
8 | }
  |  ^ consider adding a `main` function to `$DIR/tests/ui/invalid_machine_no_generics.rs`
