statum-macros-two/tests/ui/invalid_machine_no_generics.rs
extern crate statum_macros_two as statum_macros;
use statum_macros::machine;

#[machine]
struct Machine {
    // âŒ Missing `<S: State>`
    client: String,
}
